--- a/sdi705-lab-spring/src/main/resources/templates/fragments/nav.html
+++ b/sdi705-lab-spring/src/main/resources/templates/fragments/nav.html
@@ -11,7 +11,7 @@
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav">
-				<li><a href="/">Home</a></li>
+				<li><a href="/home">Home</a></li>
 				<li id="marks-menu" class="dropdown"><a class="dropdown-toggle"
 					data-toggle="dropdown" href="#"> Gestión de notas <span
 						class="caret"></span>
