--- a/sdi705-lab-spring/src/main/resources/templates/home.html
+++ b/sdi705-lab-spring/src/main/resources/templates/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+	  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:replace="fragments/head" />
 <body>
 	<nav th:replace="fragments/nav" />
@@ -7,8 +8,9 @@
 		<h2 th:text="#{welcome.message}"></h2>
 		<h3>Esta es una zona privada la web</h3>
 		<p>
-			Usuario Autenticado como : <b th:inline="text">
-				[[${#httpServletRequest.remoteUser}]] </b>
+			Usuario Autenticado como :
+			<span sec:authentication="principal.username"
+				  th:inline="text"></span>
 		</p>
 		<p>Notas del usuario</p>
 		<div class="table-responsive">
@@ -29,8 +31,10 @@
 						<td th:text="${mark.description}">Ejercicio 1</td>
 						<td th:text="${mark.score}">10</td>
 						<td><a th:href="${'/mark/details/' + mark.id}">detalles</a></td>
-						<td><a th:href="${'/mark/edit/' + mark.id}">modificar</a></td>
-						<td><a th:href="${'/mark/delete/' + mark.id}">eliminar</a></td>
+						<td><a sec:authorize="hasRole('ROLE_PROFESSOR')"
+							   th:href="${'/mark/edit/' + mark.id}">modificar</a></td>
+						<td><a sec:authorize="hasRole('ROLE_PROFESSOR')"
+							   th:href="${'/mark/delete/' + mark.id}">eliminar</a></td>
 					</tr>
 				</tbody>
 			</table>
