SDI-SpringBoot-Sesión-4.6-Paginación

--- a/sdi705-lab-spring/src/main/resources/templates/mark/list.html
+++ b/sdi705-lab-spring/src/main/resources/templates/mark/list.html
@@ -18,10 +18,17 @@
     <p>Las notas que actualmente figuran en el sistema son las
         siguientes:</p>
     <button class="btn btn-default" id="updateButton" type="button">Actualizar</button>
-    <script>
+    <script th:inline="javascript">
+        /*<![CDATA[*/
         $("#updateButton").click(function () {
-            $("#tableMarks").load('/mark/list/update');
+            var numberPage = [[${param.page}]];
+            var urlUpdate = '/mark/list/update';
+            if (numberPage != null) {
+                urlUpdate += "?page=" + numberPage[0];
+            }
+            $("#tableMarks").load(urlUpdate);
         });
+        /*]]>*/
     </script>
     <div class="table-responsive">
         <table class="table table-hover" th:fragment="tableMarks"
@@ -53,7 +60,12 @@
                                 /*<![CDATA[*/
                                 $("#resendButton[[${mark.id}]]").click(function () {
                                     $.get("/mark/[[${mark.id}]]/noresend", function (data) {
-                                        $("#tableMarks").load('/mark/list/update');
+                                        var numberPage = [[${param.page}]];
+                                        var urlUpdate = '/mark/list/update';
+                                        if ( numberPage != null ){
+                                            urlUpdate += "?page="+numberPage[0];
+                                        }
+                                        $("#tableMarks").load(urlUpdate);
                                     });
                                 });
                                 /*]]>*/
@@ -67,7 +79,12 @@
                                 /*<![CDATA[*/
                                 $("#noresendButton[[${mark.id}]]").click(function () {
                                     $.get("/mark/[[${mark.id}]]/resend", function (data) {
-                                        $("#tableMarks").load('/mark/list/update');
+                                        var numberPage = [[${param.page}]];
+                                        var urlUpdate = '/mark/list/update';
+                                        if ( numberPage != null ){
+                                            urlUpdate += "?page="+numberPage[0];
+                                        }
+                                        $("#tableMarks").load(urlUpdate);
                                     });
                                 });
                                 /*]]>*/
@@ -82,6 +99,8 @@
             </tbody>
         </table>
     </div>
+    <footer th:replace="fragments/pagination"></footer>
+
 </div>
 <footer th:replace="fragments/footer"/>
 </body>
